--- a/LuxTravel/LuxTravel.Api.csproj
+++ b/LuxTravel/LuxTravel.Api.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
     <PackageReference Include="CloudinaryDotNet" Version="1.13.2" />
+    <PackageReference Include="CommonFunctionality.Api" Version="1.0.0" />
+    <PackageReference Include="CommonFunctionality.Core" Version="1.0.0" />
     <PackageReference Include="FluentValidation" Version="9.3.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.3.0" />
     <PackageReference Include="MediatR" Version="9.0.0" />
@@ -29,8 +31,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\CommonFunctionality\CommonFunctionality.Api\CommonFunctionality.Api.csproj" />
-    <ProjectReference Include="..\..\CommonFunctionality\CommonFunctionality\CommonFunctionality.Core.csproj" />
     <ProjectReference Include="..\LuxTravel.Constants\LuxTravel.Constants.csproj" />
     <ProjectReference Include="..\LuxTravel.Models\LuxTravel.Models.csproj" />
   </ItemGroup>
