--- a/LuxTravel.Api/appsettings.json
+++ b/LuxTravel.Api/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.; Initial Catalog=LuxTravelManagement; Integrated Security=true; Max Pool Size=1000; Min Pool Size=12; Pooling=True;",
-    "AzureConnection": "Server=tcp:luxtravelserver.database.windows.net,1433;Initial Catalog=LuxTravelManagement;Persist Security Info=False;User ID=dominhchien206@luxtravelserver.database.windows.net;Password=Chien#2020;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Max Pool Size=1000; Min Pool Size=1; Pooling=True;"
+    "AzureConnection": "Server=tcp:luxtravelserver.database.windows.net,1433;Initial Catalog=LuxTravelManagement;Persist Security Info=False;User ID=dominhchien206@luxtravelserver.database.windows.net;Password=Chien#2020;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
