--- a/LuxTravel.Model/LuxTravel.Model.csproj
+++ b/LuxTravel.Model/LuxTravel.Model.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\" />
+    <Folder Include="GenericRepository\Interfaces\" />
   </ItemGroup>
 
   <ItemGroup>
