Update authentication, master data api

--- a/LuxTravel.Api/appsettings.json
+++ b/LuxTravel.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "super secret key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -10,5 +13,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.; Initial Catalog=LuxTravelManagement; Integrated Security=true; Max Pool Size=1000; Min Pool Size=12; Pooling=True;",
     "AzureConnection": "Server=tcp:luxtravelserver.database.windows.net,1433;Initial Catalog=LuxTravelManagement;Persist Security Info=False;User ID=dominhchien206@luxtravelserver.database.windows.net;Password=Chien#2020;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "CloudinarySettings": {
+    "CloudName": "minhchien206",
+    "ApiKey": "531434724358744",
+    "ApiSecret": "dF-TvO94yoSSF6L5pIJGxVae5U8"
   }
 }
