--- a/LuxTravel.Api/LuxTravel.Api.csproj
+++ b/LuxTravel.Api/LuxTravel.Api.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+    <PackageReference Include="CloudinaryDotNet" Version="1.14.0" />
     <PackageReference Include="CommonFunctionality.Api" Version="1.0.0" />
     <PackageReference Include="CommonFunctionality.Core" Version="1.0.0" />
     <PackageReference Include="MediatR" Version="9.0.0" />
