--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ BenchmarkDotNet.Artifacts/
 project.lock.json
 project.fragment.lock.json
 artifacts/
+project/appsettings.json
 
 # StyleCop
 StyleCopReport.xml
