--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,7 @@ BenchmarkDotNet.Artifacts/
 project.lock.json
 project.fragment.lock.json
 artifacts/
-project/appsettings.json
+LuxTravel.Api/appsettings.json
 
 # StyleCop
 StyleCopReport.xml
