--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 LuxTravel.Api/appsettings.json
+LuxTravel.Model/appsettings.json
 
 # StyleCop
 StyleCopReport.xml
