--- a/LuxTravel.Api/Properties/launchSettings.json
+++ b/LuxTravel.Api/Properties/launchSettings.json
@@ -19,9 +19,9 @@
     },
     "LuxTravel.Api": {
       "commandName": "Project",
-      "launchUrl": "weatherforecast",
+      "launchUrl": "",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ENVIRONMENT_VARIABLE": "Production"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
