--- a/LuxTravel.Api/Properties/launchSettings.json
+++ b/LuxTravel.Api/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "environmentVariables": {
         "ENVIRONMENT_VARIABLE": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:5002"
     }
   }
 }
