--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.1.2",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.1.2",
     "@angular/compiler": "~11.1.2",
     "@angular/core": "~11.1.2",
     "@angular/forms": "~11.1.2",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
+    "bootstrap": "^4.6.0",
+    "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^6.2.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "xng-breadcrumb": "^6.7.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
